--- a/WebApplication1/Views/People/Details.cshtml
+++ b/WebApplication1/Views/People/Details.cshtml
@@ -4,133 +4,98 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>User Profile</h2>
 
 <div>
-    <h4>Person</h4>
+    <div class="col-sm-12">
+        <h4>@Html.DisplayFor(model => model.FirstName) <span>@Html.DisplayFor(model => model.LastName)</span></h4>
+        <img src="http://www.reactionface.info/sites/default/files/imagecache/Node_Page/images/1311000574183.gif" alt="" height="200" width="200">
+    </div>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.BusinessEntity.BusinessEntityID)
-        </dt>
+    <div class="col-sm-12">
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.BusinessEntity.BusinessEntityID)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.BusinessEntity.BusinessEntityID)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.BusinessEntity.BusinessEntityID)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Employee.NationalIDNumber)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Employee.NationalIDNumber)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Employee.NationalIDNumber)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Employee.NationalIDNumber)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Password.PasswordHash)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.PersonType)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Password.PasswordHash)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.PersonType)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PersonType)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Title)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.PersonType)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Title)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.NameStyle)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.FirstName)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.NameStyle)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.FirstName)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.MiddleName)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.MiddleName)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.LastName)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.LastName)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.MiddleName)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Suffix)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.MiddleName)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Suffix)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.AdditionalContactInfo)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.AdditionalContactInfo)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Suffix)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.ModifiedDate)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Suffix)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.ModifiedDate)
+            </dd>
+        </dl>
+    </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EmailPromotion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EmailPromotion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AdditionalContactInfo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AdditionalContactInfo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Demographics)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Demographics)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.rowguid)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.rowguid)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ModifiedDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ModifiedDate)
-        </dd>
-
-    </dl>
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.BusinessEntityID }) |
