profile details stuff

--- a/WebApplication1/Content/Site.css
+++ b/WebApplication1/Content/Site.css
@@ -22,3 +22,7 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+    color: blue;
+}
