--- a/WebApplication1/Content/bootstrap.css
+++ b/WebApplication1/Content/bootstrap.css
@@ -386,7 +386,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #eeeeee;
+  border-top: 1px solid black;
 }
 
 .sr-only {
@@ -4196,6 +4196,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   padding: 15px 15px;
   font-size: 18px;
   line-height: 20px;
+  color: whitesmoke;
 }
 
 .navbar-brand:hover,
