--- a/WebApplication1/Content/NiceAdmin/css/style.css
+++ b/WebApplication1/Content/NiceAdmin/css/style.css
@@ -14,9 +14,9 @@
 
 body {
 
-    color: #797979;
+    /*color: #797979;*/
 
-    background: #eeeeee;
+    /*background: #eeeeee;*/
 
     font-family: 'Lato', sans-serif;
 
@@ -1058,7 +1058,7 @@ a.logo {
 
     float: left;
 
-    margin-top: 15px;
+    margin-top: 10px;
 
     text-transform: uppercase;
 
